Platzhalter-Image zurückgedreht auf Java 8